# back/authUser/app/Http/Controllers/API/PasswordResetController.php
@@ -1,0 +1,160 @@
+<?php
+
+namespace App\Http\Controllers\API;
+
+use App\Http\Controllers\Controller;
+use App\Http\Requests\PasswordResetCreateRequest;
+use App\Models\PasswordReset;
+use Illuminate\Http\Request;
+
+class PasswordResetController extends Controller
+{
+    /**
+     * Create token password reset
+     *
+     * @param  [string] email
+     * @return [string] message
+     */
+    /**
+     * @OA\Post(
+     *      path="/api/password/create",
+     *      tags={"PasswordResetController"},
+     *      summary="Crear token",
+     *      operationId="createPasswordReset",
+     *      @OA\Parameter(
+     *          name="create",
+     *          in="query",
+     *          @OA\JsonContent(ref="#/components/schemas/PasswordResetCreateRequest"),
+     *      ),
+     *  @OA\Response(
+     *      response=200,
+     *      description="¡Hemos enviado un correo electrónico con el enlace de restablecimiento de contraseña!",
+     *      @OA\MediaType(
+     *          mediaType="application/json",
+     *      )
+     *  ),
+     *  @OA\Response(
+     *      response=400,
+     *      description="Solicitud no válida"
+     *  ),
+     *  @OA\Response(
+     *      response=401,
+     *      description="No autorizado"
+     *  ),
+     *  @OA\Response(
+     *      response=404,
+     *      description="No encontrado"
+     *  ),
+     *  @OA\Response(
+     *      response=422,
+     *      description="Error validación"
+     *  )
+     *)
+     */
+    public function create(PasswordResetCreateRequest $request)
+    {
+        $user = User::where('email', $request->email)->first();
+        if (!$user) {
+            return response()->json([
+                'message' => 'No podemos encontrar un usuario con esa dirección de correo electrónico.'
+            ], 404);
+            $passwordReset = PasswordReset::updateOrCreate(
+                ['email' => $user->email],
+                [
+                    'email' => $user->email,
+                    'token' => bcrypt($user->email)
+                ]
+            );
+            if ($user && $passwordReset) {
+                $user->notify(new PasswordResetCreateRequest($passwordReset->token));
+                return response()->json([
+                    'message' => '¡Hemos enviado un correo electrónico con el enlace de restablecimiento de contraseña!'
+                ]);
+            }
+        }
+    }
+
+    /**
+     * Find token password reset
+     *
+     * @param  [string] $token
+     * @return [string] message
+     * @return [json] passwordReset object
+     */
+
+    public function find($token)
+    {
+        $passwordReset = PasswordReset::where('token', $token)->first();
+        if (!$passwordReset) {
+            return response()->json([
+                'message' => 'Este token de restablecimiento de contraseña no es válido.'
+            ], 404);
+        }
+        return response()->json($passwordReset);
+    }
+
+    /**
+     * Reset password
+     *
+     * @param  [string] email
+     * @param  [string] password
+     * @param  [string] password_confirmation
+     * @param  [string] token
+     * @return [string] message
+     * @return [json] user object
+     */
+    /**
+     * @OA\Post(
+     *      path="/api/password/reset",
+     *      tags={"PasswordResetController"},
+     *      summary="Reset token",
+     *      operationId="resetPasswordReset",
+     *      @OA\Parameter(
+     *          name="reset",
+     *          in="query",
+     *          @OA\JsonContent(ref="#/components/schemas/PasswordResetResetRequest"),
+     *      ),
+     *  @OA\Response(
+     *      response=200,
+     *      description="¡Restablecida el token!",
+     *      @OA\MediaType(
+     *          mediaType="application/json",
+     *      )
+     *  ),
+     *  @OA\Response(
+     *      response=400,
+     *      description="Solicitud no válida"
+     *  ),
+     *  @OA\Response(
+     *      response=401,
+     *      description="No autorizado"
+     *  ),
+     *  @OA\Response(
+     *      response=404,
+     *      description="No encontrado"
+     *  ),
+     *  @OA\Response(
+     *      response=422,
+     *      description="Error validación"
+     *  )
+     *)
+     */
+    public function reset(PasswordResetResetRequest $request)
+    {
+        $passwordReset = PasswordReset::where('token', $request->token)->first();
+        if (!$passwordReset)
+            return response()->json([
+                'message' => 'This password reset token is invalid.'
+            ], 404);
+        $user = User::where('email', $request->email)->first();
+        if (!$user)
+            return response()->json([
+                'message' => 'We can\'t find a user with that e-mail address.'
+            ], 404);
+        $user->password = bcrypt($request->password);
+        $user->save();
+        $passwordReset->delete();
+        $user->notify(new PasswordResetSuccess($passwordReset));
+        return response()->json($user);
+    }
+}
